--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.5",
     "@types/hpp": "^0.2.2",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
