--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.17",
