--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 PORT = 3001
 
 # JWT
-JWT_SECRET = "secretKey"
-JWT_EXPIRATION = "1d"
+JWT_ACCESS_SECRET = ""
+JWT_ACCESS_EXPIRATION = ""
 
 # LOG
 LOG_FORMAT = "combined"
